force-app/main/default/objects/FLAGS__Case_Flags_History_Tracking__c/FLAGS__Case_Flags_History_Tracking__c.object-meta.xml
<CustomObject>
    <label>Case Flags History Tracking</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Case Flag History Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Flags History Tracking</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>