force-app/main/default/objects/FLAGS__Case_Flags_History_Tracking__c/fields/FLAGS__Action__c.field-meta.xml
<CustomField>
    <fullName>FLAGS__Action__c</fullName>
    <label>Action</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Local Automation</fullName>
            </value>
            <value>
                <fullName>Case Created</fullName>
            </value>
            <value>
                <fullName>Case Closed</fullName>
            </value>
            <value>
                <fullName>Set Flag Button</fullName>
            </value>
            <value>
                <fullName>Clear Flag Button</fullName>
            </value>
            <value>
                <fullName>External Comment Added</fullName>
            </value>
            <value>
                <fullName>Internal Comment Added</fullName>
            </value>
            <value>
                <fullName>Email Received</fullName>
            </value>
            <value>
                <fullName>Email Sent</fullName>
            </value>
            <value>
                <fullName>Customer Attachment Added</fullName>
            </value>
            <value>
                <fullName>Task Completed</fullName>
            </value>
            <value>
                <fullName>Chatter Post Sent</fullName>
            </value>
            <value>
                <fullName>Chatter Post Received</fullName>
            </value>
            <value>
                <fullName>Automatically Cleared</fullName>
            </value>
            <value>
                <fullName>Follow-Up Process</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>