force-app/main/default/objects/FLAGS__Case_Flags_History_Tracking__c/fields/FLAGS__Business_Hours_Elapsed__c.field-meta.xml
<CustomField>
    <fullName>FLAGS__Business_Hours_Elapsed__c</fullName>
    <description>Total business hours elapsed during this Tracking record.</description>
    <label>Business Hours Elapsed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>