force-app/main/default/objects/FLAGS__Case_Flags_History_Tracking__c/fields/FLAGS__Case__c.field-meta.xml
<CustomField>
    <fullName>FLAGS__Case__c</fullName>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipName>Case_Flags_History</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>