force-app/main/default/objects/FLAGS__Case_Flags_History_Tracking__c/fields/FLAGS__Case_Flags_Business_Hours__c.field-meta.xml
<CustomField>
    <fullName>FLAGS__Case_Flags_Business_Hours__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A reference to the Case Flags Business Hours record used to calculate the Case Flag Business Age. This is set automatically and should not be manipulated.</description>
    <label>Case Flags Business Hours</label>
    <referenceTo>FLAGS__CaseFlagsBusinessHours__c</referenceTo>
    <relationshipLabel>Case Flags History Tracking</relationshipLabel>
    <relationshipName>Case_Flags_History</relationshipName>
    <type>Lookup</type>
</CustomField>