force-app/main/default/objects/FLAGS__Case_Flags_History_Tracking__c/fields/FLAGS__Case_Status__c.field-meta.xml
<CustomField>
    <fullName>FLAGS__Case_Status__c</fullName>
    <description>Status of the case at the time this History Tracking record was created.</description>
    <label>Case Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>