force-app/main/default/objects/FLAGS__Case_Flags_History_Tracking__c/fields/FLAGS__CaseTimeOffset4__c.field-meta.xml
<CustomField>
    <fullName>FLAGS__CaseTimeOffset4__c</fullName>
    <inlineHelpText>Number of hours spent with flag 4</inlineHelpText>
    <label>Case Flags Age 4 Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>