force-app/main/default/objects/FLAGS__Case_Flags_History_Tracking__c/fields/FLAGS__End__c.field-meta.xml
<CustomField>
    <fullName>FLAGS__End__c</fullName>
    <inlineHelpText>Datetime marking the ending of tracking for this history record.</inlineHelpText>
    <label>End</label>
    <type>DateTime</type>
</CustomField>