force-app/main/default/objects/FLAGS__Case_Flags_History_Tracking__c/fields/FLAGS__Event__c.field-meta.xml
<CustomField>
    <fullName>FLAGS__Event__c</fullName>
    <description>Event that triggered this History Tracking record to be created.</description>
    <label>Event</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Flag Cleared</fullName>
            </value>
            <value>
                <fullName>Case Owner Changed</fullName>
            </value>
            <value>
                <fullName>Case Status Changed</fullName>
            </value>
            <value>
                <fullName>Flag Set</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>