force-app/main/default/objects/FLAGS__Case_Flags_History_Tracking__c/fields/FLAGS__Flag__c.field-meta.xml
<CustomField>
    <fullName>FLAGS__Flag__c</fullName>
    <description>This should be used to display the Case Flag if your organization is not using business hours.</description>
    <formula>IF(NOT(FLAGS__Flag_Set__c),null,IF(FLAGS__Hours_Offset__c+FLAGS__Hours_Elapsed__c &gt;= FLAGS__CaseTimeOffset4__c, 
IMAGE( &quot;/servlet/servlet.FileDownload?flagsort=&quot; &amp; FLAGS__Case__r.FLAGS__Case_Flag_Age_Text__c &amp; &quot;&amp;file=&quot; &amp; $Setup.FLAGS__FlagPref__c.FLAGS__Offset4Image__c, &quot;L4&quot;, 16, 16), 
IF(FLAGS__Hours_Offset__c+FLAGS__Hours_Elapsed__c &gt;= FLAGS__CaseTimeOffset3__c, 
IMAGE( &quot;/servlet/servlet.FileDownload?flagsort=&quot; &amp; FLAGS__Case__r.FLAGS__Case_Flag_Age_Text__c &amp; &quot;&amp;file=&quot; &amp; $Setup.FLAGS__FlagPref__c.FLAGS__Offset3Image__c, &quot;L3&quot;, 16, 16), 
IF(FLAGS__Hours_Offset__c+FLAGS__Hours_Elapsed__c &gt;= FLAGS__CaseTimeOffset2__c, 
IMAGE( &quot;/servlet/servlet.FileDownload?flagsort=&quot; &amp; FLAGS__Case__r.FLAGS__Case_Flag_Age_Text__c &amp; &quot;&amp;file=&quot; &amp; $Setup.FLAGS__FlagPref__c.FLAGS__Offset2Image__c, &quot;L2&quot;, 16, 16),
IF(FLAGS__Hours_Offset__c+FLAGS__Hours_Elapsed__c &gt;= FLAGS__CaseTimeOffset1__c,
IMAGE( &quot;/servlet/servlet.FileDownload?flagsort=&quot; &amp; FLAGS__Case__r.FLAGS__Case_Flag_Age_Text__c &amp; &quot;&amp;file=&quot; &amp; $Setup.FLAGS__FlagPref__c.FLAGS__Offset1Image__c, &quot;L1&quot;,16,16),
IMAGE( &quot;/servlet/servlet.FileDownload?flagsort=&quot; &amp; FLAGS__Case__r.FLAGS__Case_Flag_Age_Text__c &amp; &quot;&amp;file=&quot; &amp; $Setup.FLAGS__FlagPref__c.FLAGS__BlankOffsetImage__c, &quot;L0&quot;,16,16))
))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Flag</label>
    <type>Text</type>
</CustomField>