force-app/main/default/objects/FLAGS__Case_Flags_History_Tracking__c/fields/FLAGS__Flag_Level_BH__c.field-meta.xml
<CustomField>
    <fullName>FLAGS__Flag_Level_BH__c</fullName>
    <description>Flag level in text (L0 - L4), useful for analytics.</description>
    <formula>IF(NOT(FLAGS__Flag_Set__c),null,IF(FLAGS__Business_Hours_Offset__c+FLAGS__Business_Hours_Elapsed__c &gt;= FLAGS__CaseTimeOffset4__c, 
&quot;L4&quot;, 
IF(FLAGS__Business_Hours_Offset__c+FLAGS__Business_Hours_Elapsed__c &gt;= FLAGS__CaseTimeOffset3__c, 
&quot;L3&quot;, 
IF(FLAGS__Business_Hours_Offset__c+FLAGS__Business_Hours_Elapsed__c &gt;= FLAGS__CaseTimeOffset2__c, 
&quot;L2&quot;, 
IF(FLAGS__Business_Hours_Offset__c+FLAGS__Business_Hours_Elapsed__c &gt;= FLAGS__CaseTimeOffset1__c, 
&quot;L1&quot;, 
&quot;L0&quot;) 
))))</formula>
    <inlineHelpText>Flag level in text (L0 - L4), useful for analytics.</inlineHelpText>
    <label>Flag Level (BH)</label>
    <type>Text</type>
</CustomField>