force-app/main/default/objects/FLAGS__Case_Flags_History_Tracking__c/fields/FLAGS__Flag_Set__c.field-meta.xml
<CustomField>
    <fullName>FLAGS__Flag_Set__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Flag Set</label>
    <type>Checkbox</type>
</CustomField>