force-app/main/default/objects/FLAGS__Case_Flags_History_Tracking__c/fields/FLAGS__Hours_Offset__c.field-meta.xml
<CustomField>
    <fullName>FLAGS__Hours_Offset__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Total hours elapsed during this Tracking record.</description>
    <label>Hours Offset</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>