force-app/main/default/objects/FLAGS__Case_Flags_History_Tracking__c/fields/FLAGS__Owner__c.field-meta.xml
<CustomField>
    <fullName>FLAGS__Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Owner of the Case at the time the history record was created unless assigned to a Queue.</description>
    <label>Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Case_Flags_History</relationshipName>
    <type>Lookup</type>
</CustomField>