force-app/main/default/objects/FLAGS__Case_Flags_History_Tracking__c/fields/FLAGS__Owner_Is_Active__c.field-meta.xml
<CustomField>
    <fullName>FLAGS__Owner_Is_Active__c</fullName>
    <formula>FLAGS__Owner__r.IsActive</formula>
    <label>Owner Is Active</label>
    <type>Checkbox</type>
</CustomField>