force-app/main/default/objects/FLAGS__Case_Flags_History_Tracking__c/fields/FLAGS__Start__c.field-meta.xml
<CustomField>
    <fullName>FLAGS__Start__c</fullName>
    <inlineHelpText>Datetime marking the beginning of tracking for this history record.</inlineHelpText>
    <label>Start</label>
    <type>DateTime</type>
</CustomField>